plugins/kotlin/idea/tests/testData/checker/diagnosticsMessage/fullPackageFQNameOnVisiblityError.kt
// WITH_STDLIB

package a.b

@<error descr="[INVISIBLE_MEMBER]">kotlin.internal.<error descr="[INVISIBLE_REFERENCE]">InlineOnly</error></error>
inline fun foo() {}